--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/log=GBK
 encoding//src/main/java/com/log/LogConsumer.java=GBK
+encoding//src/main/java/com/sync/ConditionTest.java=UTF-8
 encoding//src/main/java/com/sync/SyncTest.java=UTF-8
+encoding//src/main/java/com/sync/ThreeConditionTest.java=UTF-8
 encoding/<project>=UTF-8
